--- a/app/src/main/res/drawable/bg_products_iv.xml
+++ b/app/src/main/res/drawable/bg_products_iv.xml
@@ -2,6 +2,6 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@drawable/bg_orange" android:state_pressed="true" />
-    <item android:drawable="@drawable/bg_click_effect_products_iv" android:state_pressed="true" />
+    <item android:drawable="@drawable/bg_click_effect_products_iv" android:state_selected="true" />
     <item android:drawable="@drawable/bg_orange"/>
 </selector>
