--- a/app/src/main/res/layout/fragment_add_products.xml
+++ b/app/src/main/res/layout/fragment_add_products.xml
@@ -15,7 +15,7 @@
         app:layout_constraintBottom_toBottomOf="parent">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             >
             <TextView
                 android:id="@+id/tvProducts"
@@ -25,7 +25,6 @@
                 android:fontFamily="@font/title_medium"
                 android:textSize="@dimen/_23ssp"
                 android:textColor="@color/orange"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:gravity="start"
                 android:layout_margin="@dimen/_14sdp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -37,13 +36,13 @@
             <LinearLayout
                 android:id="@+id/llNoInternet"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:visibility="gone"
+                android:visibility="invisible"
                 >
                 <com.airbnb.lottie.LottieAnimationView
                     android:layout_width="match_parent"
